<resources>
    <string name="app_name">Gohan Ordering App</string>
    <string name="login">LOG IN</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="register">REGISTRATION</string>
    <string name="click_to_login">Registered? Click to login</string>
    <string name="click_to_register">Not registered? Click to register</string>
    <string name="welcome_to_konbini">WELCOME TO GOHAN</string>
    <string name="hello_world">Hello World</string>
    <string name="logout">Logout</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="name_goes_here">Name goes here</string>
    <string name="jap_goes_here">jap goes here</string>
    <string name="add_to_order">ADD TO ORDER</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="where_will_you_be_eating_today">WHERE WILL YOU BE EATING TODAY?</string>
    <string name="dine_in">Dine In</string>
    <string name="take_out">Take Out</string>
    <string name="hello_customer">Hello, customer</string>
    <string name="price">Price : ₱</string>
    <string name="peso_sign">₱</string>
    <string name="checkout">CHECKOUT</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="your_order_number_is">YOUR ORDER NUMBER IS</string>
    <string name="click_complete_if_done_ordering">Click COMPLETE if order is received by the counter</string>
    <string name="complete">Complete</string>
    <string name="email_address">Email Address :</string>
    <string name="password">Password :</string>
    <string name="order_success">Order Success!</string>
    <string name="checkoutcaps">CHECKOUT</string>
    <string name="please_be_patient">Please be patient...</string>
    <string name="log_in_to_your_account">LOG IN TO YOUR ACCOUNT</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
</resources>