<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Receipt">

    <TextView
        android:text="@string/your_order_number_is"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="30sp"
        android:id="@+id/orderNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/orderList"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/finalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/click_complete_if_done_ordering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/complete"
        android:text="@string/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>