<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backBtn"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF3E3F"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/prodImg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/prodName"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_goes_here"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/prodJapName"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jap_goes_here"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/prodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="Quantity : "
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/minusQty"
                android:backgroundTint="#FF3E3F"
                android:text="-"
                android:textColor="#F9F9F9"
                android:layout_width="60dp"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/quantity"
                android:inputType="number"
                android:focusable="false"
                android:text="1"
                android:textAlignment="center"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/plusQty"
                android:backgroundTint="#FF3E3F"
                android:text="+"
                android:textColor="#F9F9F9"
                android:layout_width="60dp"
                android:layout_height="40dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/priceDisplay"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="Price : price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/addToOrder"
                android:backgroundTint="#FF3E3F"
                android:text="@string/add_to_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="100dp"
                android:id="@+id/viewOrders"
                android:backgroundTint="#FF3E3F"
                android:text="View orders »"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
